# RedditPainpoint

./: .gitignore  README.md  analyzer.py  api.py  app.py  models.py  nlp_analyzer.py  pyproject.toml  reddit_scraper.py  requirements.txt  routes.py
.github/workflows/: frontend-tests.yml  nlp-pipeline.yml  python-tests.yml
client/: Procfile  README.md  index.html  jest.config.cjs  jest.config.js  package-lock.json  package.json  vite.config.js  vitest.config.js
client/src/: App.jsx  App.scss  index.css  main.jsx
client/src/api/: api.js
client/src/components/: NavBar.jsx  Notification.jsx  StatusBar.jsx  navBar.scss  statusBar.scss
client/src/components/FilterControls/: FilterControls.jsx  FilterControls.scss
client/src/context/: AuthContext.jsx  NotificationContext.jsx
client/src/pages/auth/: LoginPage.jsx  (+4 more)
client/src/styles/: _variables.scss
client/src/tests/: App.test.jsx  basic.test.js  setup.js
instance/: reddit_data.db
server/: .gitignore  README.md  advanced_nlp_analyzer.py  api.py  app.py  main.py  mongodb_store.py  nlp_analyzer.py  openai_analyzer.py  pyproject.toml  reddit_scraper.py  requirements.txt  routes.py  security.py
server/scripts/: generate_nlp_report.py  run_nlp_pipeline.py  verify_nlp_results.py
server/templates/: base.html  index.html
server/tests/: conftest.py  test_auth.py  test_basic.py  test_nlp_pipeline.py
static/css/: style.css
static/js/: api.js  dashboard.js  main.jsx
static/js/components/: Account.jsx  Dashboard.jsx  DataVisualization.jsx  Navigation.jsx  PainPointCard.jsx
templates/: base.html  index.html
(+33 files in other folders)
