[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "api>=0.0.7",
    "email-validator>=2.2.0",
    "flask-cors>=5.0.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "trafilatura>=2.0.0",
    "flask-restful>=0.3.10",
    "routes>=2.5.1",
    "praw>=7.8.1",
    "nltk>=3.9.1",
    "openai>=1.70.0",
    "python-dotenv>=1.1.0",
]
